--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Heey! 👋</h1>
+      <h1>Hey, I'm Meshack 👋</h1>
             <a
         target="_blank"
         href="/rss.xml"
