--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,5 +1,6 @@
 ---
 import Breadcrumbs from "@components/Breadcrumbs.astro";
+import SpeedInsights from '@vercel/speed-insights/astro';
 
 interface StringTitleProp {
   pageTitle: string;
@@ -34,6 +35,7 @@ const { props } = Astro;
   <p>{props.pageDesc}</p>
   <slot />
 </main>
+<SpeedInsights />
 
 <style>
   #main-content {
