--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -9,7 +9,6 @@ import getUniqueTags from "@utils/getUniqueTags";
 import { SITE } from "@config";
 
 const posts = await getCollection("blog");
-
 let tags = getUniqueTags(posts);
 ---
 
@@ -17,7 +16,7 @@ let tags = getUniqueTags(posts);
   <Header activeNav="tags" />
   <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
     <ul>
-      {tags.map(({ tag }) => <Tag {tag} size="lg" />)}
+      {tags.map(({ tag }) => <Tag tag={tag} size="lg" />)}
     </ul>
   </Main>
   <Footer />
