--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <main id="main-content">
     <section id="hero">
       <h1>Hey, I'm Meshack 👋</h1>
-            <a
+      <a
         target="_blank"
         href="/rss.xml"
         class="rss-link"
@@ -41,9 +41,17 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <span class="sr-only"> RSS Feed</span>
       </a>
 
-      <p> I'm Meshack, a seasoned Software Engineer specializing in Generative AI, Machine Learning, and Natural Language Processing.</p>
+      <p>
+        I'm Meshack, a seasoned Software Engineer specializing in Generative AI,
+        Machine Learning, and Natural Language Processing.
+      </p>
 
-      <p>At the heart of my work lies a passion for bridging the gap between human intelligence and artificial ingenuity. Discover my journey and insights in AI & ML on my blog, or dive into my professional story through my resume.</p>
+      <p>
+        At the heart of my work lies a passion for bridging the gap between
+        human intelligence and artificial ingenuity. Discover my journey and
+        insights in AI & ML on my blog, or dive into my professional story
+        through my resume.
+      </p>
 
       <p>Let's explore the possibilities of AI together! 🚀</p>
 
