--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -10,33 +10,37 @@ export interface Props {
 
 const { currentPage, totalPages, prevUrl, nextUrl } = Astro.props;
 
-const prev = currentPage > 1 ? "" : "disabled";
-const next = currentPage < totalPages ? "" : "disabled";
+const isPrevDisabled = currentPage <= 1;
+const isNextDisabled = currentPage >= totalPages;
 ---
 
 {
   totalPages > 1 && (
     <nav class="pagination-wrapper" aria-label="Pagination">
       <LinkButton
-        disabled={prev === "disabled"}
+        disabled={isPrevDisabled}
         href={prevUrl}
-        className={`mr-4 select-none ${prev}`}
-        ariaLabel="Previous"
+        class:list={["mr-4", "select-none", { "disabled": isPrevDisabled }]}
+        ariaLabel="Previous page"
+        title="Go to previous page"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" class={`${prev}-svg`}>
+        <svg xmlns="http://www.w3.org/2000/svg" class:list={[{ "disabled-svg": isPrevDisabled }]}>
           <path d="M12.707 17.293 8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z" />
         </svg>
         Prev
       </LinkButton>
-      {currentPage} / {totalPages}
+      <span>
+        {currentPage} / {totalPages}
+      </span>
       <LinkButton
-        disabled={next === "disabled"}
+        disabled={isNextDisabled}
         href={nextUrl}
-        className={`ml-4 select-none ${next}`}
-        ariaLabel="Next"
+        class:list={["ml-4", "select-none", { "disabled": isNextDisabled }]}
+        ariaLabel="Next page"
+        title="Go to next page"
       >
         Next
-        <svg xmlns="http://www.w3.org/2000/svg" class={`${next}-svg`}>
+        <svg xmlns="http://www.w3.org/2000/svg" class:list={[{ "disabled-svg": isNextDisabled }]}>
           <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
         </svg>
       </LinkButton>
@@ -46,7 +50,7 @@ const next = currentPage < totalPages ? "" : "disabled";
 
 <style>
   .pagination-wrapper {
-    @apply mb-8 mt-auto flex justify-center;
+    @apply mb-8 mt-auto flex justify-center items-center;
   }
   .disabled {
     @apply pointer-events-none select-none opacity-50 hover:text-skin-base group-hover:fill-skin-base;
