--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -10,13 +10,15 @@ export interface Props {
 const { centered = false } = Astro.props;
 ---
 
-<div class={`social-icons ${centered ? "flex" : ""}`}>
+<div class:list={["social-icons", { "flex": centered }]}>
   {
     SOCIALS.filter(social => social.active).map(social => (
       <LinkButton
         href={social.href}
         className="link-button"
         title={social.linkTitle}
+        target="_blank"
+        rel="noopener noreferrer"
       >
         <Fragment set:html={socialIcons[social.name]} />
         <span class="sr-only">{social.linkTitle}</span>
